2008-07-21  Matthias Clasen  <mclasen2redhat.com>

	* === Released 2.17.4 ===

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-sections.txt: Add new signal api.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* glib/tmpl/i18n.sgml: Add new gettext stuff

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 530759 – update the gobject tutorial to the XXI century

	* gobject/*: Some updates to the tutorial. Patch by Emmanuele
	Bassi.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_content_type_guess_for_tree

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 543220 – Case collision on gio-extension-points.html

	Reported by Ryan Schmidt
	* gio/overview.xml: Rename id to avoid filename conflict.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 543168 – Description of G_SLICE=debug-blocks discourages its use

	* glib/running.sgml: Improve docs of G_SLICE=debug-blocks.
	Patch by Alessandro Vesely.

2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add new GMount functions

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 521589 – [RFC] gobject documentation should mention Vala

	* gobject/tut_tools.xml: Add a reference to Vala.
	Patch by Marc-Andre Lureau.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Move g_strcmp0 to a more appropriate
	place in the docs.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_desktop_app_info_new_from_keyfile
	and g_file_monitor

2008-07-01  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio.types: Add missing types. Pointed out by David Zeuthen.

2008-06-24  Michael Natterer  <mitch@imendio.com>

	* glib/Makefile.am
	* gobject/Makefile.am: don't comment out the include of
	Makefile.decl just because there are no tests. It needs to be