@@ -1,3 +1,8 @@
+2008-07-28  Matthias Clasen  <mclasen2redhat.com>
+
+	* gio/gio-sections.txt:
+	* gio/gio-docs.xml: Add GEmblemedIcon 
+
 2008-07-21  Matthias Clasen  <mclasen2redhat.com>
 
 	* === Released 2.17.4 ===
